fixed text wrapping issue with media queries. removed image from phones.

--- a/styles/_media.scss
+++ b/styles/_media.scss
@@ -231,6 +231,7 @@
 		.image {
 			width: 90% !important;
 			margin: 0 auto !important;
+			display: none;
 		}
 	}
 	.right-header {
@@ -239,14 +240,24 @@
 		width: 90%;
 		margin: 0 auto;
 		.name {
-			font-size: 2.5rem !important;
+			font-size: 1.5rem !important;
 			text-align: center;
 			padding-top: 3rem;
 		}
 		h2 {
-			font-size: 1.5rem !important;
+			font-size: 1.25rem !important;
 			text-align: center;
 		}
+		p {
+			font-size: 1rem !important;
+			text-align: center;
+		}
+	}
+	.theme-btn {
+		right: 10%;
+	}
+	.btn-container {
+		align-self: center;
 	}
 }
 @media screen and (max-width: 700px) {
